--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android_Firebase2</string>
+    <string name="prefs_file">com.example.android_firebase2.PREFERECE_FILE_KEY</string>
 </resources>
